base/infrastructure/tailscale/egress/windows-exporter/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: windows-exporter-web
  namespace: infrastructure
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`metrics.pc.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: windows-exporter-egress
          port: 9182
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: windows-exporter-websecure
  namespace: infrastructure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`metrics.pc.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: windows-exporter-egress
          port: 9182
  tls:
    secretName: windows-exporter-tls
